refactor(tests): simplify test setups and assertions
- Streamline object creation in `CreatePlanCommandHandlerShould` tests
- Improve variable naming and enhance readability in `MariaDBEventBusShould` tests